<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:layout_weight="1.02" />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.38"
        android:text="@string/str_null" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_sreg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/btn_reg" />

        <Button
            android:id="@+id/button_squery"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_query" />

        <Button
            android:id="@+id/button_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:visibility="gone"
            android:text="@string/btn_image" />

        <Button
            android:id="@+id/btloop"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/btn_loop" />

    </LinearLayout>

</LinearLayout>