<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_loopstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.66"
        android:text="@string/str_null" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_qryscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.79"
            android:text="@string/btn_scan" />

        <Button
            android:id="@+id/button_qrydel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:text="@string/btn_del" />

        <Button
            android:id="@+id/button_qryexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:text="@string/btn_cancle" />
    </LinearLayout>

</LinearLayout>